crates/plotnik-tests/tests/macro_diagnostics/fail/depth_invalid.stderr
error: `depth` needs an unsigned integer or `auto`
 --> tests/macro_diagnostics/fail/depth_invalid.rs:4:13
  |
4 |     depth = nope,
  |             ^^^^
